# eyrc-25-26-holo-battalion

evaluator/task5b/pyarmor_runtime_000000/: __init__.py
hardware_test_scripts/: communication_testing.ino  esp32_motor_testing.ino  proximity_sensor_testing.ino
hb_control/: package.xml  setup.cfg  setup.py
hb_control/config/: camera_testing.yaml
hb_control/extras/log/: latest_list
hb_control/extras/testing/: marker_dict.py
hb_control/src/hb_control/: camera_testing.py  central_mqtt.py  dynamic_path_planner.py  grid_planner.py  holonomic0_controller.py  holonomic2_controller.py  holonomic4_controller.py  holonomic_controller.py  holonomic_perception.py  mqtt.py  path_planner.py
hb_interfaces/: CMakeLists.txt
hb_interfaces/msg/: BotCmd.msg  BotCmdArray.msg  WorldPath.msg
hb_interfaces/srv/: Attach.srv
src/evaluator/task5a/: task5a.py
src/evaluator/task5a/pyarmor_runtime_000000/: __init__.py
src/evaluator/task5b/: task5b.py
src/hardware_test_scripts/: electromagnet_testing.ino
