<?xml version="1.0"?>
<package format="3">
  <name>hb_control</name>
  <version>0.0.0</version>
  <description>Holonomic perception, control, and MQTT</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>hb_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
